Simplify Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 ﻿{
-  "buildCommand": "npm run build",
+  "buildCommand": "echo \"No build needed\"",
   "outputDirectory": "public",
-  "installCommand": "npm install",
-  "framework": null,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "installCommand": "echo \"No install needed\"",
+  "framework": null
 }
